member.post api remove end_date field
