# docs/swagger.json
@@ -74,13 +74,6 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "Emoployment End Date",
-                        "name": "end_date",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "Employment Status",
                         "name": "employment_status_id",
